@@ -1,6 +1,9 @@
 -=[ GAIM ]=-  The Pimpin' Penguin AIM Clone That's Good For The Soul!
 
 0.9.13:
+	Not much to say for this release.  Bug fixes, That's all.  Look
+for the goodies I promised in 0.9.13 to appear in 0.9.14 which should be
+released very soon now.  
 
 0.9.12:
 	Well guys, looks like we got some nifty things in this version.
